nueva actualizacion y refactorizacion de codigo